@@ -174,7 +174,7 @@ Then we use our M0 Line macro assembler to convert our assembly into hex2 format
 Then we need to assemble that hex into our desired program:
 ./bin/vm --rom roms/stage1_assembler-2 --tape_01 temp2 --tape_02 roms/forth --memory 48K
 
-roms/forth should with the sha256sum of a0d760e98534ec7abea6677e80fac98d2ec42d5bb1f02b1575122831fed46651
+roms/forth should with the sha256sum of 82e88791a784d9633a457e5cabbed5383e6c4f54d0711428c034c4ae2424fc21
 
 Our forth will first attempt to evaluate any code in tape_01 and then evaluate any code that the user types in
 (Otherwise there is no way for a forth fan to have a chance against the lisp in terms of being able to bootstrap something cool)
